* Added Game Play mode activity after Splash screen (XML and Java) * Added more animations for slide_in_up, slide_out_up, slide_in_down and slide_out_down

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,13 +26,15 @@
         </activity>
 
         <activity
-            android:name=".LoginActivity"
-            android:label="@string/app_name">
+            android:name=".PlayModeActivity">
         </activity>
 
         <activity
-            android:name=".RegisterActivity"
-            android:label="@string/app_name">
+            android:name=".LoginActivity">
+        </activity>
+
+        <activity
+            android:name=".RegisterActivity">
         </activity>
 
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
