* Added code for Message to show that support for online mode is under progress.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,10 @@
             android:name=".RegisterActivity">
         </activity>
 
+        <activity
+            android:name=".Temp">
+        </activity>
+
         <!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
         <meta-data
